--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Оптические компьтеры</title>
 </head>
 <body>
-    
+    <header class="container">
+        <div class="container">
+            <a href="/" class="logo">LOGO</a>
+            <p class="info">Сайт сделан Афанасьевым Дмитриеим</p>
+        </div>
+    </header>
+    <div class="main">
+        <div class="container">
+            <div class="about">
+                <h1>Оптические компьютеры</h1>
+                <img src="img/1.jpg" alt="">
+                <div class="opt">
+                    <p>Оптический компьютер ― это устройство (пока скорее гипотетическое), которое в качестве единицы (бита) информации использует фотон. В обычном компьютере в качестве бита информации используется электрон, а если точнее ― заряд электрона: если через контакт протек некоторый минимальный заряд, то это единица, а если протек заряд меньше порогового, то ноль. Заменяем электрон на фотон, заряд на интенсивность электромагнитного поля, получается так называемый классический оптический компьютер.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
