--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <header class="container">
         <div class="container">
-            <a href="/" class="logo">LOGO</a>
-            <p class="info">Сайт сделан Афанасьевым Дмитриеим</p>
+            <a href="/" class="logo"><img src="img/3.png" alt=""></a>
         </div>
     </header>
     <div class="main">
@@ -20,6 +19,11 @@
                 <img src="img/1.jpg" alt="">
                 <div class="opt">
                     <p>Оптический компьютер ― это устройство (пока скорее гипотетическое), которое в качестве единицы (бита) информации использует фотон. В обычном компьютере в качестве бита информации используется электрон, а если точнее ― заряд электрона: если через контакт протек некоторый минимальный заряд, то это единица, а если протек заряд меньше порогового, то ноль. Заменяем электрон на фотон, заряд на интенсивность электромагнитного поля, получается так называемый классический оптический компьютер.</p>
+                </div>
+                <h1>Каков принцип его работы?</h1>
+                <img src="img/2.jpg" alt="">
+                <div class="opt">
+                    <p>В качестве входного порта оптического чипа выступает набор оптических волноводов. Через эти волноводы на вход поступает оптический сигнал, который можно представить в качестве набора нулей и единиц (в этом случае мы имеем дело с цифровым оптическим компьютером) или в качестве непрерывной функции времени и координаты (в этом случае такая система называется аналоговым оптическим чипом). Далее этот сигнал преобразуется заданным образом в оптической схеме посредством различных оптических элементов: резонаторов или волноводов. Преобразованный сигнал поступает на выходной порт ― он, опять же, может быть представлен либо в качестве массива нулей и единиц, либо в качестве непрерывной функции.</p>
                 </div>
             </div>
         </div>
